--- a/templates/password.html
+++ b/templates/password.html
@@ -11,5 +11,7 @@
         <input type="password" name="password" placeholder="Enter password" required>
         <button type="submit">Submit</button>
     </form>
+
+    <h2>password is 123</h2>
 </body>
 </html>
