--- a/templates/creator.html
+++ b/templates/creator.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+<button class="home_button" onclick="location.href='/'">Go to Home</button>
+
 <h1>Create Plan</h1>
 
 <form action="/submit_form" method="POST">
@@ -42,10 +44,11 @@
 <br>
 
 <form action="/file_upload" method="post" enctype="multipart/form-data">
-    <label for="csv_file">Upload student info (CSV file)</label>
-    <input type="file" id="csv_file" name="csv_file" accept=".csv" required>
+    <label for="image_file">Upload Image:</label>
+    <input type="file" name="image_file" id="image_file" accept="image/*">
     <button type="submit">Upload</button>
 
+    <!--sending error messages back with flash imported from flask-->
     {% with messages = get_flashed_messages(with_categories=True) %}
         {% if messages %}
             <ul class="flashes">
